uf-6797: Should fetch based on familyId rather than fetch everything